Fix bugs on z-index for sidebar and nav header

--- a/src/components/CTLayout/CTNavHeader/index.scss
+++ b/src/components/CTLayout/CTNavHeader/index.scss
@@ -7,7 +7,7 @@
   opacity: 1;
   width: 100%;
   height: max-content;
-  z-index: 1020;
+  z-index: 1000;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: #ffffff;
 
