--- a/src/components/CTLayout/CTNavSidebar/index.scss
+++ b/src/components/CTLayout/CTNavSidebar/index.scss
@@ -1,7 +1,7 @@
 #ct-nav-sidebar {
   height: 100%;
   width: 240px;
-  z-index: 2010;
+  z-index: 1020;
   position: fixed;
   top: 0;
   transition: visibility 200ms linear, width 200ms linear;
